Add more logging functionality

--- a/code/ch04/ex04_dupes/rebar.config
+++ b/code/ch04/ex04_dupes/rebar.config
@@ -17,6 +17,5 @@
 {format, [
     {files, ["src/*.erl","test/*.erl"]},
     {formatter, otp_formatter},
-    {options, #{paper => 80}},
-    {truncate_strings, false }    
+    {options, #{paper => 360,ribbon=>360 }}
 ]}.
