--- a/code/ch05/ex02_bday/apps/bday/rebar.config
+++ b/code/ch05/ex02_bday/apps/bday/rebar.config
@@ -24,7 +24,7 @@
 {plugins, [rebar3_format]}.
 
 {format, [
-    {files, ["src/*.erl","test/*.erl"]},
+    {files, ["src/*.erl","test/*.erl", "src/*.tests"]},
     {formatter, default_formatter},
     {options, #{ribbon=>80 }}
 ]}.
