--- a/code/ch02/pbt_step04/rebar.config
+++ b/code/ch02/pbt_step04/rebar.config
@@ -14,8 +14,10 @@
 {plugins, [rebar3_format]}.
 
 {format, [
-    {files, ["src/*.erl","test/*.erl"]},
-    {formatter, otp_formatter},
-    {options, #{paper => 80}},
-    {truncate_strings, false }    
+    {files, [
+	"test/*.erl"
+	
+	]},
+    {formatter, default_formatter},
+    {options, #{ribbon=>80 }}   
 ]}.
