--- a/code/ch05/ex01_bday/apps/bday/rebar.config
+++ b/code/ch05/ex01_bday/apps/bday/rebar.config
@@ -17,7 +17,7 @@
  %% but only as a test dependency
  {profiles,
 	 [{test, [
-	 {deps, [proper]}
+	 {eunit_opts, [verbose]},{deps, [proper]}
 	 ]}
  ]}.
 
