--- a/code/ch05/ex02_bday/rebar.config
+++ b/code/ch05/ex02_bday/rebar.config
@@ -25,6 +25,7 @@
  %% but only as a test dependency
  {profiles,
 	 [{test, [
+	 {eunit_opts, [verbose]},
 	 {deps, [proper]}
 	 ]}
  ]}.
@@ -32,7 +33,7 @@
 {plugins, [rebar3_format]}.
 
 {format, [
-    {files, ["app/bday/src/*.?rl","app/bday/test/*.?rl"]},
+    {files, ["apps/bday/src/*.?rl","apps/bday/test/*.?rl"]},
     {formatter, default_formatter},
     {options, #{ribbon=>80 }}
 ]}.
