--- a/code/ch04/ex17_frequency/rebar.config
+++ b/code/ch04/ex17_frequency/rebar.config
@@ -1,6 +1,6 @@
 {erl_opts, [debug_info]}.
 {deps, [
-  {sstr, {git, "git://github.com/rustkas/erlang-simple-string.git", {branch, "rebar3_way"}}}
+  {sstr, {git, "https://github.com/rustkas/erlang-simple-string.git", {branch, "rebar3_way"}}}
   ]}.
 
 %% the plugin itself
