--- a/code/ch05/ex02_bday/rebar.config
+++ b/code/ch05/ex02_bday/rebar.config
@@ -1,8 +1,8 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 
-{relx, [{release, {ex01_bday, "0.1.0"},
-         [ex01_bday,
+{relx, [{release, {bday, "0.1.0"},
+         [bday,
           sasl]},
 
         {sys_config, "./config/sys.config"},
